[gd_scene load_steps=7 format=3 uid="uid://dvneh5lnlww17"]

[ext_resource type="Script" uid="uid://y8xyxh2818tc" path="res://levels/intro_cutscene.gd" id="1_wu4c4"]
[ext_resource type="PackedScene" uid="uid://ctq4ak63k361o" path="res://levels/fade_transition.tscn" id="2_0h8re"]
[ext_resource type="Texture2D" uid="uid://djcws2d3yvq66" path="res://levels/Background_1.png" id="3_b0jvu"]

[sub_resource type="Animation" id="Animation_wu4c4"]
resource_name = "Camera_pan"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(576, 470), Vector2(576, 330), Vector2(576, 190)]
}

[sub_resource type="Animation" id="Animation_0h8re"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 470)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0jvu"]
_data = {
&"Camera_pan": SubResource("Animation_wu4c4"),
&"RESET": SubResource("Animation_0h8re")
}

[node name="IntroCutscene" type="Node2D"]
script = ExtResource("1_wu4c4")

[node name="FadeTransition" parent="." instance=ExtResource("2_0h8re")]

[node name="Timer" type="Timer" parent="FadeTransition"]

[node name="Timer2" type="Timer" parent="FadeTransition"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b0jvu")
}

[node name="Background1" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(576, 324)
scale = Vector2(0.5989583, 0.59629625)
texture = ExtResource("3_b0jvu")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 470)
zoom = Vector2(2, 2)

[connection signal="timeout" from="FadeTransition/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FadeTransition/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
